feat(collision): bound live material broadphase